labs/network-policy/deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: network-policy
spec:
  podSelector: {}
